<resources>
    <string name="app_name">Pizza App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="additional">ADDITIONAL</string>
    <string name="buy_button">BUY</string>
    <string name="cheese_additional">Add more cheese</string>
    <string name="tomato_additional">Add more tomato</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="olive_additional">Add more olive</string>
    <string name="pizza_edge_additional">Add flavored pizza edge</string>
    <string name="delivery">DELIVERY</string>
    <string name="total">TOTAL %s</string>
    <string name="delivery_price">Delivery %s</string>
    <string name="cancel_button">CANCEL</string>
    <string name="choose_pizza">Choose your favorite pizza!</string>
    <string name="summary_label">Order summary</string>

    <string name="pizza_detail">{pizzaName} Detail</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Pizzas -->
    <string name="margherita">Margherita Pizza</string>
    <string name="pepperoni">Pepperoni Pizza</string>
    <string name="cheese">Cheese Pizza</string>
    <string name="veggie">Veggie Pizza</string>
    <string name="additional_price">$1.00</string>

</resources>