<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listPizzasFragment">

    <fragment
        android:id="@+id/listPizzasFragment"
        android:name="com.example.pizzaapp.ListPizzasFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list_pizzas">
        <action
            android:id="@+id/action_listPizzasFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_listPizzasFragment_to_pizzaDetailFragment"
            app:destination="@id/pizzaDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/pizzaDetailFragment"
        android:name="com.example.pizzaapp.PizzaDetailFragment"
        android:label="@string/pizza_detail"
        tools:layout="@layout/fragment_pizza_detail">
        <action
            android:id="@+id/action_pizzaDetailFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pizzaDetailFragment_to_listPizzasFragment"
            app:destination="@id/listPizzasFragment" />
        <argument
            android:name="pizzaName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.pizzaapp.SummaryFragment"
        android:label="@string/summary_label"
        tools:layout="@layout/fragment_summary">
        <action
            android:id="@+id/action_summaryFragment_to_listPizzasFragment"
            app:destination="@id/listPizzasFragment" />
        <action
            android:id="@+id/action_summaryFragment_to_pizzaDetailFragment"
            app:destination="@id/pizzaDetailFragment" />
    </fragment>
</navigation>