<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="pizzaDetailFragment"
            type="com.example.pizzaapp.PizzaDetailFragment" />

        <variable
            name="viewModel"
            type="com.example.pizzaapp.model.OrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PizzaDetailFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/pizza1" />

        <TextView
            android:id="@+id/pizza_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:text="Pizza de calabresa" />

        <TextView
            android:id="@+id/pizza_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textColor="@color/gray_subtext"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pizza_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pizza_name"
            tools:text="$10.00" />

        <TextView
            android:id="@+id/additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/additional"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="298dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            app:layout_constraintBottom_toBottomOf="@id/additional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/additional"
            app:layout_constraintTop_toTopOf="@+id/additional" />

        <TextView
            android:id="@+id/price_cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textColor="@color/gray_subtext"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/additional_cheese"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/additional_cheese"
            tools:text="$10.00"
            android:text="@string/additional_price" />

        <TextView
            android:id="@+id/price_tomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textColor="@color/gray_subtext"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/additional_tomato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/additional_tomato"
            tools:text="$10.00"
            android:text="@string/additional_price" />

        <TextView
            android:id="@+id/price_edge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textColor="@color/gray_subtext"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/additional_edge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/additional_edge"
            tools:text="$10.00"
            android:text="@string/additional_price" />

        <TextView
            android:id="@+id/price_olive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/gray_subtext"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/additional_olive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/additional_olive"
            tools:text="$10.00"
            android:text="@string/additional_price" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buy"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Subtotal $10.00"
            android:text="@{@string/subtotal(viewModel.price)}" />

        <Button
            android:id="@+id/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="#F44336"
            android:text="@string/buy_button"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize15Percent"
            tools:layout_editor_absoluteX="12dp"
            android:onClick="@{() -> pizzaDetailFragment.onClickBuy()}" />

        <CheckBox
            android:id="@+id/additional_tomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/tomato_additional"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional_cheese"
            android:onCheckedChanged="@{(e, a) -> viewModel.setAdditional(e)}"
            android:buttonTint="@color/main_color" />

        <CheckBox
            android:id="@+id/additional_edge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/pizza_edge_additional"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional_tomato"
            android:onCheckedChanged="@{(e, a) -> viewModel.setAdditional(e)}"
            android:buttonTint="@color/main_color" />

        <CheckBox
            android:id="@+id/additional_olive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/olive_additional"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional_edge"
            android:onCheckedChanged="@{(e, a) -> viewModel.setAdditional(e)}"
            android:buttonTint="@color/main_color" />

        <CheckBox
            android:id="@+id/additional_cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/cheese_additional"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional"
            android:onCheckedChanged="@{(e, a) -> viewModel.setAdditional(e)}"
            android:buttonTint="@color/main_color" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
